# LatticeBoltzman

./: CMakeLists.txt  README.md  projectDescription.txt
include/: lbm_kernel.cuh
shaders/: arrow.vert  shader.frag
source/: lbm_kernel.cu  main.cpp  main_flow_obstacle.cpp  main_lid_cavity.cpp
